Fixed color contrast on new request page

--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -85,7 +85,7 @@
     font-weight: 400;
     font-size: 17.5px;
     line-height: 2;
-    color: #999;
+    color: #707070;
 }
 
 .contact-form-error-message {
