--- a/app/static/styles/new_request/new-request.css
+++ b/app/static/styles/new_request/new-request.css
@@ -97,3 +97,8 @@
     margin: 0 auto;
     pointer-events: all;
 }
+
+.clear-file-button {
+    background-color: #dc3545;
+    border-color: #dc3545;
+}
